objects/CO_2__c.object
<CustomObject>
    <fields>
        <fullName>Error_Lien_Holder_Repo__c</fullName>
        <description>testing 2</description>
        <label>Error Lien Holder Repo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Under_2500__c</fullName>
        <description>testing 3</description>
        <label>Error Under 2500</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>picklist_for_translation_ELISA__c</fullName>
        <description>descp1</description>
        <label>picklist for translation ELISA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>uno</fullName>
                </value>
                <value>
                    <fullName>dos</fullName>
                </value>
                <value>
                    <fullName>tres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CusObj 2</label>
    <nameField>
        <label>CO 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COs 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidationRule_PTC_1</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>Error!</errorMessage>
    </validationRules>
</CustomObject>